--- a/src/server/home/index.njk
+++ b/src/server/home/index.njk
@@ -50,6 +50,13 @@
           <li>
             <a href="https://prettier.io">Prettier</a>
           </li>
+        </ul>
+        
+        <h2 class="govuk-heading-m">Application Pages</h2>
+        <ul class="govuk-list govuk-list--bullet">
+          <li>
+            <a href="/tbcase" class="govuk-link">TB Case Form - Exeter Reactor Removals</a>
+          </li>
           <li>and lots more... 😎</li>
         </ul>
       </div>
