--- a/src/server/tbcase-main/index.njk
+++ b/src/server/tbcase-main/index.njk
@@ -52,7 +52,7 @@
                 },
                 id: "cph-number",
                 name: "cph-number",
-                value: "12/345/6789",
+                value: "01/234/5678",
                 classes: "govuk-!-margin-bottom-0"
               }) }}
             </div>
@@ -60,24 +60,24 @@
               <h3 class="govuk-heading-s govuk-!-margin-bottom-2">Auto Populated Incident List</h3>
               <ul class="govuk-list">
                 <li class="govuk-!-margin-bottom-2">
-                  <a href="/tbcase?incident=24/05441" class="govuk-link" aria-describedby="current-incident-hint">
-                    <strong>24/05441</strong> (Current)
+                  <a href="/tbcase?incident=25/12345" class="govuk-link" aria-describedby="current-incident-hint">
+                    <strong>25/12345</strong> (Current)
                   </a>
                   <div id="current-incident-hint" class="govuk-hint govuk-!-font-size-14 govuk-!-margin-top-1">
                     Click to load this incident's details
                   </div>
                 </li>
                 <li class="govuk-!-margin-bottom-2">
-                  <a href="/tbcase?incident=23/98765" class="govuk-link" aria-describedby="previous-incident-1-hint">
-                    23/98765 (Previous)
+                  <a href="/tbcase?incident=24/98765" class="govuk-link" aria-describedby="previous-incident-1-hint">
+                    24/98765 (Previous)
                   </a>
                   <div id="previous-incident-1-hint" class="govuk-hint govuk-!-font-size-14 govuk-!-margin-top-1">
                     Click to load this incident's details
                   </div>
                 </li>
                 <li class="govuk-!-margin-bottom-2">
-                  <a href="/tbcase?incident=23/54321" class="govuk-link" aria-describedby="previous-incident-2-hint">
-                    23/54321 (Previous)
+                  <a href="/tbcase?incident=24/54321" class="govuk-link" aria-describedby="previous-incident-2-hint">
+                    24/54321 (Previous)
                   </a>
                   <div id="previous-incident-2-hint" class="govuk-hint govuk-!-font-size-14 govuk-!-margin-top-1">
                     Click to load this incident's details
@@ -113,7 +113,7 @@
                     },
                     id: "cph",
                     name: "cph",
-                    value: "00/000/0000"
+                    value: "01/234/5678"
                   }) }}
                 </div>
                 <div class="govuk-grid-column-one-quarter">
@@ -124,7 +124,7 @@
                     },
                     id: "nat-inc",
                     name: "nat-inc",
-                    value: "24/05441"
+                    value: "25/12345"
                   }) }}
                 </div>
                 <div class="govuk-grid-column-one-quarter">
@@ -135,7 +135,7 @@
                     },
                     id: "tel",
                     name: "tel",
-                    value: "N/A"
+                    value: "01555 123456"
                   }) }}
                 </div>
                 <div class="govuk-grid-column-one-quarter">
@@ -146,7 +146,7 @@
                     },
                     id: "mob",
                     name: "mob",
-                    value: "01234567890"
+                    value: "07123 456789"
                   }) }}
                 </div>
               </div>
@@ -161,7 +161,7 @@
                     },
                     id: "contact-name",
                     name: "contact-name",
-                    value: "ABC & Sons"
+                    value: "Sample Farm Ltd"
                   }) }}
                 </div>
                 <div class="govuk-grid-column-one-half">
@@ -172,7 +172,7 @@
                     },
                     id: "farm-name",
                     name: "farm-name",
-                    value: "A Farm"
+                    value: "Example Farm Holdings"
                   }) }}
                 </div>
               </div>
@@ -187,7 +187,7 @@
                       text: "Address",
                       classes: "govuk-label--s"
                     },
-                    value: "Road\nDevon\nEX12 7AB",
+                    value: "123 Sample Street\nExample Village\nCountyshire\nSW1A 1AA",
                     rows: 3
                   }) }}
                 </div>
@@ -249,17 +249,17 @@
                       {
                         name: "day",
                         classes: "govuk-input--width-2",
-                        value: "27"
+                        value: "15"
                       },
                       {
                         name: "month", 
                         classes: "govuk-input--width-2",
-                        value: "09"
+                        value: "03"
                       },
                       {
                         name: "year",
                         classes: "govuk-input--width-4",
-                        value: "2024"
+                        value: "2025"
                       }
                     ]
                   }) }}
@@ -278,17 +278,17 @@
                       {
                         name: "day",
                         classes: "govuk-input--width-2",
-                        value: "27"
+                        value: "20"
                       },
                       {
                         name: "month",
                         classes: "govuk-input--width-2", 
-                        value: "09"
+                        value: "03"
                       },
                       {
                         name: "year",
                         classes: "govuk-input--width-4",
-                        value: "2024"
+                        value: "2025"
                       }
                     ]
                   }) }}
