--- a/src/server/tbcase-removals/removals.njk
+++ b/src/server/tbcase-removals/removals.njk
@@ -19,7 +19,7 @@
   },
   {
     text: "TB Case Form",
-    href: "/tbcase"
+    href: "/tbcase/case-details"
   },
   {
     text: "Removals",
@@ -75,7 +75,7 @@
             {{ govukButton({
               text: "Close form",
               classes: "govuk-button--secondary",
-              href: "/tbcase",
+              href: "/tbcase/case-details",
               attributes: {
                 "aria-label": "Close TB case form and return to main page"
               }
@@ -871,7 +871,7 @@
             {{ govukButton({
               text: "Cancel",
               classes: "govuk-button--secondary",
-              href: "/tbcase",
+              href: "/tbcase/case-details",
               attributes: {
                 "aria-describedby": "cancel-help"
               }
