--- a/src/server/home/index.njk
+++ b/src/server/home/index.njk
@@ -55,7 +55,7 @@
         <h2 class="govuk-heading-m">Application Pages</h2>
         <ul class="govuk-list govuk-list--bullet">
           <li>
-            <a href="/tbcase" class="govuk-link">TB Case Form - Exeter Reactor Removals</a>
+            <a href="/tbcase/case-details" class="govuk-link">TB Case Form - Exeter Reactor Removals</a>
           </li>
           <li>and lots more... 😎</li>
         </ul>
